# OptikTools

./: .coveragerc  .gitignore  README.md  data.json  meta.yaml  pyproject.toml
OptikTools/: beam.py  components.py  directories.py  polarization.py  utils.py
development/: dev_0.py
docs/examples/: README.rst  basic_gaussian_beam.py  component_sequence.py  example_0.py  halfwave_plate.py  polarization_state.py
docs/source/: conf.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_00f06256cafaa4a8_beam_py.html  z_00f06256cafaa4a8_components_py.html  z_00f06256cafaa4a8_polarization_py.html  z_00f06256cafaa4a8_utils_py.html
tests/: test_beam_api.py  test_components_api.py  test_polarization_api.py  test_validation.py
