[build-system]
requires = ["setuptools>=40.8.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OptikTools"
dynamic = ["version"]
description = "A package for refractive index values."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.10"
authors = [{ name="Martin Poinsinet de Sivry-Houle", email="martin.poinsinet.de.sivry@gmail.com"}]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Physics',
    'Intended Audience :: Science/Research',
]

keywords = ["refractive index", "optics"]

dependencies = [
    "pydantic",
    "numpy",
    "MPSPlots",
    "TypedUnit"
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["OptikTools*"]}}
include-package-data = true


[tool.setuptools_scm]
write_to = "OptikTools/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project.optional-dependencies]
testing = [
    "pytest >=7.4,<9.0",
    "pytest-cov >=2,<6",
    "pytest-json-report ~=1.5",
    "coverage ~=7.6"
]


documentation = [
    "numpydoc ==1.6.0",
    "sphinx >=5.1.1",
    "sphinx-gallery ==0.15.0",
    "sphinx-rtd-theme ==2.0.0",
    "pydata-sphinx-theme ==0.16.1",
]

dev = [
    "flake8 ==7.1.1",
]
